tests/shouldFail/xFailReturn.c
int f(void){
}

int main(void){
	f();
	return 0;
}
